html2 file updated

--- a/html2.html
+++ b/html2.html
@@ -4,12 +4,28 @@
 <style>
 body{
 	text-align : center;
-	background : black;
+	background : pink;
+	background-size : cover;
+	background-position : center;
 	color : white;
 }
+p{
+	font-size : 30px;
+
+}
+input{
+	padding : 10px;
+	font-size : 18px;
+}
+input[type="submit"]{
+	background : red;
+	color : pink;
+}
+
 </style>
 </head>
 <body>
+	<img src="c:\Users\Yashvi\Desktop\b.bmp">
 	<h1>Kirangarg</h1>
 	<p> This is a paragraph</p>
 	<imput type="email" placeholder = " Enter your email">
