html2 file updated

--- a/html2.html
+++ b/html2.html
@@ -28,7 +28,7 @@ input[type="submit"]{
 	<img src="c:\Users\Yashvi\Desktop\b.bmp">
 	<h1>Kirangarg</h1>
 	<p> This is a paragraph</p>
-	<imput type="email" placeholder = " Enter your email">
+	<input type="email" placeholder = " Enter your email">
 	<input type="sumbit" value="Submit">
 </body>
 </html>
