html2 file updated

--- a/html2.html
+++ b/html2.html
@@ -25,7 +25,7 @@ input[type="submit"]{
 </style>
 </head>
 <body>
-	<img src="c:\Users\Yashvi\Desktop\b.bmp">
+	<img src="c:\Users\Yashvi\Desktop\a.jpg">
 	<h1>Kirangarg</h1>
 	<p> This is a paragraph</p>
 	<input type="email" placeholder = " Enter your email">
