--- a/html2.html
+++ b/html2.html
@@ -4,32 +4,32 @@
 <style>
 body{
 	text-align : center;
-	background : pink;
-	background-size : cover;
-	background-position : center;
-	color : white;
+	background : red;
+	color : green ;
 }
 p{
 	font-size : 30px;
-
+        text-align : right;
+}
+h1{
+	text-align : right;
 }
 input{
 	padding : 10px;
 	font-size : 18px;
 }
-input[type="submit"]{
-	background : red;
-	color : pink;
+input[type="button"]{
+	background : blue;
+	color : red;
 }
 
 </style>
 </head>
 <body>
-	<img src="c:\Users\Yashvi\Desktop\a.jpg">
 	<h1>Kirangarg</h1>
 	<p> This is a paragraph</p>
 	<input type="email" placeholder = " Enter your email">
-	<input type="sumbit" value="Submit">
+	<input type="button" value="Submit">
 </body>
 </html>
 
