--- a/html2.html
+++ b/html2.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
-<head>
-	<title>kiran garg</title>
-<style>
-body{
-	text-align : center;
-	background : red;
-	color : green ;
-}
-p{
-	font-size : 30px;
-        text-align : right;
-}
-h1{
-	text-align : right;
-}
-input{
-	padding : 10px;
-	font-size : 18px;
-}
-input[type="button"]{
-	background : blue;
-	color : red;
-}
+<html>
 
-</style>
+<head>
+
+	<title>bootstrap demo</title>
+	<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--bootstrap-->
+	<link href=" css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-	<h1>Kirangarg</h1>
-	<p> This is a paragraph</p>
-	<input type="email" placeholder = " Enter your email">
-	<input type="button" value="Submit">
+	<!--javascript files-->
+	<!--jquery libray-->
+	<script src="js/jquery-3.2.1.js">
+	</script>
+	<!--bootstrap js library-->
+	<script src="js/bootstrap.js">
+	</script>
 </body>
 </html>
 
